from-ragu/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-red
  template:
    metadata:
      labels:
        app: flask-red
    spec:
      containers:
      - name: flask-red
        image: rsiddapp/flask-red:latest
        ports:
        - containerPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-green
  template:
    metadata:
      labels:
        app: flask-green
    spec:
      containers:
      - name: flask-green
        image: rsiddapp/flask-green:latest
        ports:
        - containerPort: 8000
