from-ragu/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: green.awanipro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-green-service
            port:
              number: 80
  - host: red.awanipro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-red-service
            port:
              number: 80
